--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline --hot"
+    "dev": "webpack-dev-server --content-base src --inline --hot",
+    "start": "node client.js"
   },
   "author": "",
   "license": "ISC"
