--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tutorials",
+  "name": "React-Portal",
   "version": "0.0.0",
   "description": "",
   "main": "webpack.config.js",
