--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline --hot",
-    "start": "node webpack.config.js"
+    "start": "webpack"
   },
   "author": "",
   "license": "ISC"
