--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-Portal",
+  "name": "react-portal",
   "version": "0.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "webpack"
+    "dev": "webpack-dev-server --content-base src --inline --hot"
   },
   "author": "",
   "license": "ISC"
