--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline --hot",
-    "start": "NODE_ENV=production node ./src"
+    "dev": "webpack-dev-server --content-base src --inline --hot"
   },
   "author": "",
   "license": "ISC"
